--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "powerbi-client": "^2.22.3",
+    "powerbi-client-vue-js": "^1.0.3",
     "vue": "^3.2.13"
   },
   "devDependencies": {
